--- a/nav_bar.css
+++ b/nav_bar.css
@@ -1,28 +1,36 @@
-.topnav {
-    background-color: #333;
-    overflow: hidden;
-    display: flex;
-    justify-content: flex-end;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
-    background-color: #3e04aa;
-    color: white;
-  }
+li {
+  display: inline;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+a {
+  padding: 10px 20px;
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  color: black;
+  border: 2px solid black;
+  transition: 0.5s;
+  padding: 8px 18px;
+  border-radius: 5px;
+}
+
+a:active {
+  color: white;
+  background-color: black;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  padding: 20px 0;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
+}
+
+.topnav a.active {
+  background-color: #0993ac;
+  color: white;
+  border-radius: 5px;
+}
