--- a/shop.css
+++ b/shop.css
@@ -1,29 +1,67 @@
 
+.all-products{
+  padding-top: 40px;
+  padding-left: 80px;
+  padding-bottom: 100px;
+  
+}
+.second-row{
+  padding-top: 25px;
+}
+
 .products{
     display: inline-block;
-    margin-right: 10px;
+    margin-right: 30px;
     vertical-align: top;
     padding-top: 30px;
     padding-left: 10px;
+    border: .5px solid #d1cece;
+    border-radius: 10px;
+    color: #666161;
+    background-color: #fdfcfc;
+    
 }
 .item-image{
-    width: 250px;
+    width: 150px;
     height: 150px;
-    border-radius: .5em;
-    border: 2px solid rgb(190, 186, 186)
+    border-radius: 10px;
+    padding-right: 50px;
+    padding-left: 50px;
+   
 }
 .item-title {
-    font-weight: bold;
+    font-family:sans-serif;
+    font-size:20px;
   }
 
-  .item-price {
+.item-price {
     color: rgb(66, 7, 175);
     font-weight: bold;
+    font-family:sans-serif;
   }
 
+.buy-label {
+    margin-left: 6em; /* Adjust the margin value as needed */
+    color: #0aaa1f;
+    font-family:cursive ;
+  }
+#myDropdown{
+    padding: 4px;
+    font-size: 16px;
+    border: 1px solid #e2e0e0;
+    border-radius: 4px;
+    background-color: #ffffff;
+    color: #0aaa1f;
+  }
+#myDropdown option {
+    padding: 8px;
+  }
+
+  
   /*body {
     background-image: url("https://images.unsplash.com/photo-1587329310686-91414b8e3cb7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=871&q=80"); 
     background-size: cover; 
     background-repeat: no-repeat;
   }*/
   
+
