--- a/shop.css
+++ b/shop.css
@@ -2,16 +2,16 @@
 .all-products{
   padding-top: 40px;
   padding-left: 80px;
-  padding-bottom: 100px;
+  padding-bottom: 10px;
   
 }
 .second-row{
-  padding-top: 25px;
+  padding-top: 35px;
 }
 
 .products{
     display: inline-block;
-    margin-right: 30px;
+    margin-right: 40px;
     vertical-align: top;
     padding-top: 30px;
     padding-left: 10px;
@@ -41,23 +41,94 @@
   }
 
 .buy-label {
-    margin-left: 6em; /* Adjust the margin value as needed */
+    margin-left: 4.3em; /* Adjust the margin value as needed */
     color: #0aaa1f;
     font-family:cursive ;
   }
-#myDropdown{
-    padding: 4px;
-    font-size: 16px;
-    border: 1px solid #e2e0e0;
-    border-radius: 4px;
-    background-color: #ffffff;
-    color: #0aaa1f;
-  }
-#myDropdown option {
+
+.myDropdown option {
     padding: 8px;
   }
 
+  .table{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 25em; 
+  padding-bottom: 50px;
+  }
+  .heading-container {
+    display: flex;
+    justify-content: center;
+  }
+  .order-heading{
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 25px;
+  display: inline-block;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 5px;
+  align-items: center;
+  }
+
+  #table {
+    width: 60%; /* Adjust the width as needed */
+    border-collapse: collapse;
+    border-radius: 10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #6d6b6b;
+    
+  }
   
+  #table th,
+  #table td {
+    border: 1px solid rgb(158, 156, 156);
+    padding: 10px;
+    text-align: center;
+    font-size: 20px;
+  }
+  #table th {
+    font-size: 26px; /* Adjust the font size as needed */
+    font-style: normal;
+    font-weight: normal;
+    padding: 15px;
+    border-radius: 10px;
+    color: #034257;
+  }
+.quantity{
+  width: 30px;
+  font-size: 16px;
+  border: 1px solid #949090;
+  border-radius: 4px;
+  background-color: #ffffff;
+  color: #057914;
+  
+}
+
+.button-container {
+  text-align: right;
+  padding-top: 2em;
+  padding-right: 3.4em;
+}
+#check-total {
+  display: inline-block;
+  padding: 12px 24px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  background-color: #4CAF50;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+#check-total:hover {
+  background-color: #39883d;
+}
+
   /*body {
     background-image: url("https://images.unsplash.com/photo-1587329310686-91414b8e3cb7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=871&q=80"); 
     background-size: cover; 
