--- a/styles-comments.css
+++ b/styles-comments.css
@@ -13,7 +13,6 @@ a{
 a:hover{
     color: black;
     border: 2px solid black;
-    transition: 0.5s;
     padding: 18px;}
 a:active{
     color: white;
@@ -22,20 +21,71 @@ nav{
     display: flex;
     justify-content: center;
     padding-top:20px;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+    box-shadow: 0 3px 4px 0 rgba(0,0,0,.3);
     padding-bottom: 20px;}
 
 /* NAVBAR End */
 
+.subject{
+    color: #00AE7F;
+    font-size: 30px;
+    font-family: sans-serif;
+    padding: 0 14%;
+}
+p{
+    text-align: left;
+}
+.questionBox p{
+    text-align: left;
+}
+
 .questionBox{
+    width: 70%;
     display: flex;
     justify-content: center;
-}
-radioswitches{
-    display: flex;
-    flex-direction: row;
-}
-switch{
+    padding: 20px;
+    margin: 2% auto;
+    box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     display: flex;
     flex-direction: column; 
     align-items: center; }
+
+radioswitches{
+    display: flex;
+    flex-direction: row;
+    margin-left: 70px; }
+
+
+textarea{
+    width: 90%;
+}
+switch{
+    justify-content: space-evenly;
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    margin-right: 70px;
+    }
+
+select{
+    width: 90%;
+}
+
+.submitBtn {
+    display: block;
+    margin: 2% auto;
+    padding: 5px 25px;
+    background-color: green;
+    color: white;
+    border: 0;
+  }
+
+.submitBtn:hover {
+    display: block;
+    margin: 2% auto;
+    padding: 5px 25px;
+    background-color: lightgreen;
+    color: black;
+    border: 1px solid black;
+}
+
