--- a/nav_bar.css
+++ b/nav_bar.css
@@ -2,6 +2,11 @@ li {
   display: inline;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+nav img {
+  height: 100px;
+  width: 100px;
+  margin-right: 500px;
+}
 
 a {
   padding: 10px 20px;
@@ -11,21 +16,21 @@ a {
 
 a:hover {
   color: black;
-  border: 2px solid black;
-  transition: 0.5s;
+  border: 2px solid #0993ac;
+  transition: 0.15s;
   padding: 8px 18px;
   border-radius: 5px;
 }
 
 a:active {
   color: white;
-  background-color: black;
+  background-color: rgb(247, 245, 245);
 }
 
 nav {
   display: flex;
-  justify-content: center;
-  padding: 20px 0;
+  justify-content: right;
+  padding: 10px 0;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
 }
 
@@ -33,5 +38,6 @@ nav {
   background-color: #0993ac;
   color: white;
   border-radius: 5px;
+  padding: 8px 18px;
 }
 
