--- a/comments.css
+++ b/comments.css
@@ -1,30 +1,4 @@
-/* Navbar Start */
-li {
-    float: left;
-    display: inline;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 
-    'Lucida Grande', 'Lucida Sans Unicode', 
-    Geneva, Verdana, sans-serif;}
-a{
-    padding: 20px;
-    padding: top 10px bottom 10px; 
-    color: black;
-    text-decoration: none;}
-a:hover{
-    color: black;
-    border: 2px solid black;
-    padding: 18px;}
-a:active{
-    color: white;
-    background-color: black;}
-nav{
-    display: flex;
-    justify-content: center;
-    padding-top:20px;
-    box-shadow: 0 3px 4px 0 rgba(0,0,0,.3);
-    padding-bottom: 20px;}
 
-/* NAVBAR End */
 
 .subject{
     color: #00AE7F;
@@ -32,29 +6,35 @@ nav{
     font-family: sans-serif;
     padding: 0 14%;
 }
-p{
-    text-align: left;
-}
-.questionBox p{
-    text-align: left;
-}
 
+/* form {
+    display: grid;
+    place-items: center;
+}
+   */
 .questionBox{
     width: 70%;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     padding: 20px;
+    padding-left: 100px;
     margin: 2% auto;
     box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     display: flex;
     flex-direction: column; 
-    align-items: center; }
+    align-items:flex-start;
+    border-radius: 10px;
+    /* text-align: left;  */
+    
+}
 
 radioswitches{
     display: flex;
     flex-direction: row;
-    margin-left: 70px; }
-
+    }
+input[type="radio"] {
+    border-color: blue;
+}
 
 textarea{
     width: 90%;
@@ -64,8 +44,8 @@ switch{
     display: flex;
     flex-direction: column; 
     align-items: center;
-    margin-right: 70px;
-    }
+    margin-right: 27%;
+}
 
 select{
     width: 90%;
@@ -78,7 +58,7 @@ select{
     background-color: green;
     color: white;
     border: 0;
-  }
+}
 
 .submitBtn:hover {
     display: block;
@@ -89,3 +69,11 @@ select{
     border: 1px solid black;
 }
 
+button{
+    display:block;
+    margin:auto;
+}
+
+.thankYou{
+    display: none;
+}
