--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,47 +1,22 @@
+/* styles of the body section */
 body{
   background-image: url("/img/QuizBackground.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-color: rgba(255,255,255,0.2); 
   background-blend-mode: overlay;
+  font-family: sans-serif,Arial, Helvetica, sans-serif;
 }
 
-/* Navbar Start */
-li {
-    float: left;
-    display: inline;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 
-    'Lucida Grande', 'Lucida Sans Unicode', 
-    Geneva, Verdana, sans-serif;}
-a{
-    padding: 20px;
-    padding: top 10px bottom 10px; 
-    color: black;
-    text-decoration: none;}
-a:hover{
-    color: black;
-    border: 2px solid black;
-    transition: 0.5s;
-    padding: 18px;}
-a:active{
-    color: white;
-    background-color: black;}
-nav{
-    display: flex;
-    background-color: #DAFFFB;
-    justify-content: center;
-    padding-top:20px;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
-    padding-bottom: 20px;
-  }
-
+/* styles of the question section */
 #quizsection {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
   }
-  
+
+/* styles of the quiz container */
 #quizcontainer {
     width: 80%;
     max-width: 800px;
@@ -85,6 +60,7 @@ span{
     border-radius: 50px;
 }
 
+/* styles of the all the answer buttons */
 .btn{
     width:250px ;
     border: 1px solid black;
@@ -95,19 +71,82 @@ span{
     margin-right: 70px;
 }
 
+/* styles of the view score */
 .viewScore{
+  text-align: center;
   background-color:  #176B87;
   color: white;
-  width: 100px;
+  width: 130px;
   padding: 10px;
   border-radius: 15px;
   float: right;
   margin-right: 15px;
 }
 
-.correct{
-  background-color: green;
+.score-container {
+  display: none; /* Hidden by default */
+  width: 80%;
+  max-width: 500px;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 50%; /* Center horizontally */
+  transform: translateX(-50%); /* Shift left by half of width */
+  top: 20%;
+  overflow: auto; /* Enable scroll if needed */
+  border-radius: 50px;
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+
+/* styles of score view container */
+.score-view {
+  background-color: #dafffb;
+  margin: 10% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  border-radius: 50px;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.progressOutcome {
+  display: flex; /* Make it a flex container */
+  flex-direction: column; /* Stack items vertically */
+  align-items: center; /* Center items horizontally */
+  justify-content: center; /* Center items vertically */
+}
+
+.quizOutcome{
+  margin-top: 30px;
+  font-size: 18px;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+/* Styles  of close button hover and focus */
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* styles of start again button */
+#startAgain{
+  background-color:  #176B87;
+  text-align: center;
+  text-decoration: none;
   color: white;
+  width: 150px;
+  padding: 10px;
+  border-radius: 15px;
+  margin-right: 15px;
 }
 
 
