--- a/css/shop.css
+++ b/css/shop.css
@@ -1,10 +1,19 @@
+body{
+  /* background-image: url("https://images.pexels.com/photos/531756/pexels-photo-531756.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+  background: rotateX(180deg); */
 
+
+}
 .all-products{
   padding-top: 40px;
-  padding-left: 80px;
+  padding-left: 100px;
   padding-bottom: 10px;
-  
-} 
+  margin-left: 3%;
+  } 
 .second-row{
   padding-top: 35px;
 }
@@ -14,12 +23,19 @@
     margin-right: 40px;
     vertical-align: top;
     padding-top: 30px;
-    padding-left: 10px;
-    border: .5px solid #d1cece;
+    padding-left: 20px;
+    border: 2px solid #b3afaf;
     border-radius: 10px;
-    color: #666161;
-    background-color: #fdfcfc;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .2);
+    background-color: #e8ecee;
+    /* background-color: rgba(255, 255, 255, 0.5); */
+    /* background-color: transparent; */
+    /* box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .2);
+    backdrop-filter: blur(20px); */
+}
+
+.products:hover{
+  transform: scale(1.05);
+  box-shadow:#0d3542;
 }
 
 .item-image{
@@ -28,23 +44,22 @@
     border-radius: 10px;
     padding-right: 50px;
     padding-left: 50px;
-   
 }
-
 .item-title {
     font-family:sans-serif;
     font-size:20px;
+    color: #001C30;
   }
 
 .item-price {
-    color: rgb(66, 7, 175);
+    color:#001C30;
     font-weight: bold;
     font-family:sans-serif;
   }
 
 .buy-label {
-    margin-left: 4.3em; /* Adjust the margin value as needed */
-    color: #0aaa1f;
+    margin-left: 4em; 
+    color: #001C30;
     font-family:cursive ;
   }
 
@@ -68,10 +83,12 @@
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 25px;
   display: inline-block;
-  border: 1px solid black;
+  border: 1px solid #176B87;
   padding: 10px;
   border-radius: 5px;
   align-items: center;
+  color: #001C30
+  ;
   }
 
   #table {
@@ -79,16 +96,18 @@
     border-collapse: collapse;
     border-radius: 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #6d6b6b;
-    
+    color: #0d3542;
+    border: 1px solid #0d3542;
   }
   
+
   #table th,
   #table td {
-    border: 1px solid rgb(158, 156, 156);
+    border: 1px solid #176B87;
     padding: 10px;
     text-align: center;
     font-size: 20px;
+    
   }
   #table th {
     font-size: 26px; /* Adjust the font size as needed */
@@ -96,22 +115,22 @@
     font-weight: normal;
     padding: 15px;
     border-radius: 10px;
-    color: #000000;
+    color: #001C30;
   }
 .quantity{
   width: 30px;
   font-size: 16px;
-  border: 1px solid #949090;
+  border: 0.1px solid #001C30;
   border-radius: 4px;
-  background-color: #ffffff;
-  color: #057914;
-  
+  background-color: #a9e4fc;
+  color: #001C30;
+  padding: 5px;
 }
 
 .button-container {
   text-align: right;
   padding-top: 1em;
-  padding-right: 3.4em;
+  padding-right: 4.6em;
 }
 #check-total ,#checkout{
   display: inline-block;
@@ -120,8 +139,8 @@
   font-weight: bold;
   text-align: center;
   text-decoration: none;
-  background-color: #4CAF50;
-  color: #fff;
+  background-color: #001C30;
+  color: #ffffff;
   border: none;
   border-radius: 6px;
   cursor: pointer;
@@ -129,18 +148,19 @@
 }
 
 #check-total:hover {
-  background-color: #39883d;
+  background-color: #0d3542;
 }
 #checkout:hover {
-  background-color: #39883d;
+  background-color: #0d3542;
 }
 #total-cost-lable,#total-cost{
-  color: #062794;
+  color: #001C30;
 }
 
 .feild-container {
   text-align: right;
   padding-right: 12.3em;
+  color: #001C30;
 }
 
 .input-field {
@@ -155,6 +175,18 @@
   padding: 5px;
   height: 14px;
   border-radius: 3px;
+  background-color: transparent;
+  border: .5px solid #001C30;
+}
+
+#ALERT{
+  /* margin-top: 100% ; */
+  margin-left: 59%;
+  background-color: rgb(250, 247, 247);
+  color: white;
+  width: 300px;
+  padding: 10px;
+
 }
 
 
