--- a/Student_02/css/navbar.css
+++ b/Student_02/css/navbar.css
@@ -1,32 +1,42 @@
-/* Navbar Start */
-
 header{
-    margin: 0;
+    margin: -10px -30px ;
     z-index: 2;
     position: sticky;
     top: 0;
     display: flex;
-    /* justify-content: space-between; */
     align-items: center;
 }
-
+nav{
+    margin: 0;
+    width: 100%;
+    display: flex;
+    padding-top:20px;
+    box-shadow: 0 3px 4px 0 rgba(0,0,0,.3);
+    padding-bottom: 20px;
+    background-color: #001C30 ;
+}
+/* #001C30 */
 nav img{
-    filter: invert(100%) ;
     margin-left: 50px;
     margin-right: auto;
     height: 50px;
     width: 50px; 
+    background-color: #001C30;
 }
+#logoHeading p{
+    padding: 0;
+    color: white;
+    font-size: 20px;
+    margin-left: 0;
+  }
 
 nav ul{
     margin-right: 5%;
+    background-color: #001C30;
 }
 nav li {
-    /* float: left; */
     display: inline;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 
-    'Lucida Grande', 'Lucida Sans Unicode', 
-    Geneva, Verdana, sans-serif;
+    
 }
 
 nav a.active{
@@ -36,34 +46,22 @@ nav a.active{
 }
 
 nav a{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 
+    'Lucida Grande', 'Lucida Sans Unicode', 
+    Geneva, Verdana, sans-serif;
     padding: 20px;
-    /* padding: top 10px bottom 10px;  */
-    /* color: black; */
     border: 2px solid transparent;
-    /* border-radius: 0 28px; */
     color: white;
     font-weight:800;
     text-decoration: none;
+    background-color: #001C30;
 }
 
-nav a:hover:not(#Home){
-    
+nav a:hover:not(.active){
     border: 2px solid white;
     border-radius: 28px 0;
     transition: 0.6s;
-    padding: 20px;}
-  
-nav{
-    margin: 0;
-    width: 100%;
-    display: flex;
-    /* justify-content: center; */
-    padding-top:20px;
-    box-shadow: 0 3px 4px 0 rgba(0,0,0,.3);
-    padding-bottom: 20px;
-    /* background-color: #001C30; */
-    background-color: black;
+    padding: 20px;
 }
+  
 
-
-/* NAVBAR End */
