--- a/Student_01/css/content-page-zaid.css
+++ b/Student_01/css/content-page-zaid.css
@@ -1,44 +1,39 @@
-*{
-    margin: 0;
 
-}
 /* Start Hero */
 
 .hero {
     /* background-size: contain; */
     /* background-position: center; */
+    background-image: url(..//images/europe_fans.jpg);
+    
     width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    background-color: rgb(0,0,0,0.4);
+    background-color: rgba(14, 13, 13, 0.4);
+    border-radius: 50px;
 }
 
 .hero-content{
     line-height: 2.5;
-    font-size: large;
-}
-
-.hero-content>video{
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    /* appears behind the other elements */
-    z-index: -1;
-    width: 100%;
-    
+    backdrop-filter: blur(10px);
+    border-radius: 20px;
 }
 
 .hero-title{
-    font-size: 44px;
-    color: white;
+    font-size: 50px;
+    color: rgb(0, 0, 0);
+    font: size 20px;
+
 }
+
 .hero-subtitle{
-    color: white;
-    font-size: 21px;
-    font-weight: 400;
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+    font-weight: 520px;
+    
 }
 
 /* End Hero */
@@ -105,8 +100,19 @@
     justify-content: center; */
 }
 
-.description-item video{
+/* .description-item video{
     width: 400px;
+} */
+.inimg{
+    width: 400px;
+    height: 250px;
+    border-radius: 10px;
+}
+.images{
+    margin-left: 20%;
+}
+.seimg{
+    border-radius: 10px;
 }
 
 .video-description{
@@ -139,13 +145,15 @@
     margin: 60px 0;
     padding: 35px 150px;
     line-height: 1.5;
+    border-top: 1px solid black;
 }
 .readmore-item>h3{
     text-align: center;
     font-size: 40px;
+    padding-bottom: 20px;
 }
 .readmore-item>p{
-    font-size: 20px;
+    font-size: 23px;
 }
 .readmore-item images{
     display: flex;
@@ -158,39 +166,17 @@
     border-radius: 20px;
 }
 /* End Read More  */
-.page-editor-button{
-    padding: 50px;
-    text-align: end;
-    
-}
+
 .page-editor-button a{
     text-decoration: none;
     padding: 10px;
     color: white;
-    background-color: brown;
+    background-color: #001C30;
     border-radius: 20px;
     font-weight: bold;
     /* font-size: 20px; */
 }
-
+ul{
+    font-size: 23px;
+}
 /* End Content */
-
-
-.slow-motion-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    animation: slowMotion 8s infinite; /* Adjust the animation duration for the desired slow-motion effect */
-  }
-  
-  @keyframes slowMotion {
-    0%, 100% {
-      transform: scale(1); /* Normal playback at keyframes 0% and 100% */
-    }
-    50% {
-      transform: scale(1.5); /* Slow-motion effect at keyframe 50% (halfway through the animation) */
-    }
-  }
