--- a/Student_04/css/gallery.css
+++ b/Student_04/css/gallery.css
@@ -1,5 +1,8 @@
 #main{
-  background-color: #176B87;
+  background: #667db6;  
+  background: -webkit-linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);  
+  background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
+
 }
 .selectContainer #heading{
   margin-right: 300px;
