--- a/Student_04/css/sitemap.css
+++ b/Student_04/css/sitemap.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../../Images/green.jpg);
+    background-image: url(../images/green.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
