--- a/Student_01/css/shop.css
+++ b/Student_01/css/shop.css
@@ -9,8 +9,9 @@
 
 .all-products{
   padding-top: 40px;
-  padding-left: 100px;
+  padding-left: 30px;
   padding-bottom: 10px;
+  margin-left: 4%;
   } 
 .second-row{
   padding-top: 35px;
@@ -21,7 +22,7 @@
     margin-right: 20px;
     vertical-align: top;
     padding-top: 30px;
-    padding-left: 20px;
+    padding-left: 10px;
     border: 2px solid #b3afaf;
     border-radius: 10px;
     background-color: #e8ecee;
@@ -57,7 +58,7 @@
   }
 
 .buy-label {
-    margin-left: 7em; 
+    margin-left: 4em; 
     color: #001C30;
     font-family:cursive ;
   }
@@ -181,17 +182,17 @@
   color: white;
   width: 300px;
   padding: 10px;
-  
 }
 .page-editor-button a{
   text-decoration: none;
   padding: 10px;
   color: white;
-  background-color:#001C30;
+  background-color: #001C30;
   border-radius: 20px;
   font-weight: bold;
   /* font-size: 20px; */
 }
+
 
 
 
