--- a/Student_02/css/navbar.css
+++ b/Student_02/css/navbar.css
@@ -6,14 +6,13 @@ header{
     position: sticky;
     top: 0;
     display: flex;
-    /* justify-content: space-between; */
     align-items: center;
 }
 
 nav img{
     filter: invert(100%) ;
     margin-left: 50px;
-    margin-right: auto;
+    margin-right: 50px;
     height: 50px;
     width: 50px; 
 }
@@ -64,6 +63,12 @@ nav{
     /* background-color: #001C30; */
     background-color: black;
 }
+
+#logoHeading p{
+    font-size: 20px;
+    margin-right: 300px;
+    color: white;
+  }
 
 
 /* NAVBAR End */
