--- a/Student_03/css/aboutUs.css
+++ b/Student_03/css/aboutUs.css
@@ -106,6 +106,23 @@ section{
   color:orange;
 }
 
+/* styles of editor page button */
+.page-editor-button{
+  padding: 50px;
+  text-align: end;
+  
+}
+
+.page-editor-button a{
+  text-decoration: none;
+  padding: 10px;
+  color: white;
+  background-color:  #176B87;
+  border-radius: 20px;
+  font-weight: bold;
+
+}
+
 
   
  
