--- a/Student_03/css/aboutUs.css
+++ b/Student_03/css/aboutUs.css
@@ -7,7 +7,7 @@
 /* styles of body section */
 body{
     background-color:#DAFFFB;
-    font-family: sans-serif,Arial, Helvetica, sans-serif;
+    /* font-family: sans-serif,Arial, Helvetica, sans-serif; */
 }
 
 .heading{
