--- a/Student_02/css/AB-details.css
+++ b/Student_02/css/AB-details.css
@@ -1,24 +1,32 @@
 body {
-    background-color: aqua;
-    }
+    background-image: linear-gradient(to right,red ,yellow,red)
+}
     
-    .all {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+.all {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.all h3{
+    font-size: 30px;
+}
+h4{
+    font-size: 20px;
+    background-color: yellowgreen;
+}
     
-    .details{
-        background-color: white;
-        width: 100%;
-        text-align: center;
-        padding: 20px ;
-    }
+.details{
+    background-color: white;
+    width: 100%;
+    text-align: center;
+    padding: 20px ;
+}
     
-    a{
-        color: black;
-    }
+a{
+    font-size: large;
+    color: black;
+}
     
-    p{
-        text-align: center;
-    }
+p{
+    text-align: center;
+}
