--- a/Student_02/css/history.css
+++ b/Student_02/css/history.css
@@ -3,11 +3,16 @@ html{
 }
 body{
     background-image: url(../images/soccer-488700_1280.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    
     background-attachment: fixed;
 }
 
 .hat{
     background-color:#b8e6bf88 ;
+    border-radius: 15px;
     width: 100%;
     height:100vh;
     display: flex;
@@ -17,16 +22,16 @@ body{
 }
 .hat p{
     font-family: 'Josefin Sans', sans-serif;
-    text-align: center;
+    color: #001C30;
+    font-weight: 1000;
     font-size: xx-large;
+    text-align: center;
 }
 
 h1{
 
-
     font-family: 'Alfa Slab One', cursive;
     
-
     font-size: 500%;
 }
 
@@ -38,6 +43,8 @@ h1{
     
 }
 .shortcuts div{
+    font-family: 'VT323', monospace;
+    font-size: larger;
     background-color: #013469 ;
     border-radius: 20px;
     padding: 20px;
@@ -74,7 +81,8 @@ h1{
     background-color: #176b87d4;
 }
 #evolution,#international,#conclusion{
-    background-color:rgba(240, 255, 255, 0.778)
+    background-color: #9adfcdb5;
+    /* background-color: rgba(255, 0, 0, 0.171); */
 }
 topic{    
     font-family: 'Edu SA Beginner', cursive;
@@ -100,12 +108,18 @@ content img{
     border-radius: 30px;
     width:auto;
 }
+.linktotop{
+    color: #001C30;
+    font-weight: 900;
+}
 
 .conclusion{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 40vh;
 }
-.conclusion content{
-    width: 100%;
+
+p{
+    font-size:30px;
 }
