--- a/Student_02/css/comments.css
+++ b/Student_02/css/comments.css
@@ -57,18 +57,30 @@ switch{
 .submitBtn {
     display: block;
     margin: 2% auto;
-    padding: 5px 25px;
+    padding:10px 25px;
     background-color: green;
     color: white;
-    border: 0;
     border-radius: 10px;
 }
 
 .submitBtn:hover {
     background-color: lightgreen;
     color: black;    
+  
 }
 
 .thankYou{
     display: none;
+}
+
+footer{
+    padding-left: 1%;
+    height: 25px;
+    border-radius: 10px;
+    position: sticky;
+    top: 100vh;
+    background-color: rgb(84, 214, 228);
+}
+footer a{
+    text-decoration: none;
 }
