--- a/Student_02/css/navbar.css
+++ b/Student_02/css/navbar.css
@@ -1,67 +1,71 @@
-header{
-    margin: -10px -30px ;
-    z-index: 2;
+
+header {
     position: sticky;
     top: 0;
+    margin: 0;
+    z-index: 2;  
     display: flex;
     align-items: center;
 }
-nav{
+
+nav {
     margin: 0;
     width: 100%;
     display: flex;
-    padding-top:20px;
-    box-shadow: 0 3px 4px 0 rgba(0,0,0,.3);
+    padding-top: 20px;
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .3);
     padding-bottom: 20px;
-    background-color: #001C30 ;
-}
-/* #001C30 */
-nav img{
-    margin-left: 50px;
-    margin-right: auto;
-    height: 50px;
-    width: 50px; 
     background-color: #001C30;
 }
-#logoHeading p{
-    padding: 0;
-    color: white;
-    font-size: 20px;
-    margin-left: 0;
-  }
 
-nav ul{
+nav img {
+    margin-left: 50px;
+    margin-right: 10px; 
+    height: 50px;
+    width: 50px;
+    background-color: #001C30;
+}
+
+#logoHeading {
+    color: white;
+    padding-left:20px ;
+    font-size: 20px;
+    margin-right: 10px;
+    margin: -10px 0;
+}
+
+nav ul {
+    margin-left: auto;
     margin-right: 5%;
     background-color: #001C30;
 }
+
 nav li {
     display: inline;
-    
 }
 
-nav a.active{
+nav a.active {
     padding: 33px;
     border-bottom: 4px solid black;
     border-bottom: 5px solid white;
 }
 
-nav a{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 
-    'Lucida Grande', 'Lucida Sans Unicode', 
+nav a {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular',
+    'Lucida Grande', 'Lucida Sans Unicode',
     Geneva, Verdana, sans-serif;
     padding: 20px;
     border: 2px solid transparent;
     color: white;
-    font-weight:800;
+    font-weight: 800;
     text-decoration: none;
     background-color: #001C30;
 }
 
-nav a:hover:not(.active){
+nav a:hover:not(.active) {
     border: 2px solid white;
     border-radius: 28px 0;
     transition: 0.6s;
     padding: 20px;
 }
-  
 
