--- a/Student_02/css/navbar.css
+++ b/Student_02/css/navbar.css
@@ -1,12 +1,10 @@
-/* Navbar Start */
 header{
     margin: 0;
     z-index: 2;
     position: sticky;
     top: 0;
-    margin: 0;
-    z-index: 2;  
     display: flex;
+    /* justify-content: space-between; */
     align-items: center;
 }
 #logoHeading p{
@@ -16,50 +14,42 @@ header{
 }
 nav img{
     filter: invert(100%) ;
-    margin-left: 50px;
-    margin-right: 10px; 
+    margin-left: 30px;
+    margin-right: 40px;
     height: 50px;
-    width: 50px;
-    background-color: #001C30;
+    width: 50px; 
 }
 
-#logoHeading {
-    color: white;
-    padding-left:20px ;
-    font-size: 20px;
-    margin-right: 10px;
-    margin: -10px 0;
-}
-
-nav ul {
-    margin-left: auto;
+nav ul{
     margin-right: 5%;
-    background-color: #001C30;
 }
-
 nav li {
+    /* float: left; */
     display: inline;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 
+    'Lucida Grande', 'Lucida Sans Unicode', 
+    Geneva, Verdana, sans-serif;
 }
 
-nav a.active {
+nav a.active{
     padding: 33px;
     border-bottom: 4px solid black;
     border-bottom: 5px solid white;
 }
 
-nav a {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular',
-    'Lucida Grande', 'Lucida Sans Unicode',
-    Geneva, Verdana, sans-serif;
+nav a{
     padding: 20px;
+    /* padding: top 10px bottom 10px;  */
+    /* color: black; */
     border: 2px solid transparent;
+    /* border-radius: 0 28px; */
     color: white;
-    font-weight: 800;
+    font-weight:800;
     text-decoration: none;
-    background-color: #001C30;
 }
 
-nav a:hover:not(.active) {
+nav a:hover:not(#Home){
+    
     border: 2px solid white;
     border-radius: 28px 0;
     transition: 0.6s;
@@ -77,3 +67,5 @@ nav{
     background-color: #001C30;
 }
 
+
+/* NAVBAR End */
