--- a/Student_04/css/navbar.css
+++ b/Student_04/css/navbar.css
@@ -14,8 +14,8 @@ header{
 }
 nav img{
     filter: invert(100%) ;
-    margin-left: 50px;
-    margin-right: auto;
+    margin-left: 30px;
+    margin-right: 40px;
     height: 50px;
     width: 50px; 
 }
