--- a/Student_04/css/contentPage.css
+++ b/Student_04/css/contentPage.css
@@ -10,6 +10,7 @@ body{
     padding: 25px;
     background-color: #001C30;
     margin-left: -10px;
+    margin-top: 30px;
 }
 h1{
     text-align: center;
